# sargvision-swarm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  CHALLENGES.md  PHASE1_LINUX.md  PROTOCOLS.md
scripts/: smoke.py
src/sargvision_swarm/: __init__.py  cli.py
src/sargvision_swarm/agents/: __init__.py  backends.py  drone_agent.py  peer_dialogue.py
src/sargvision_swarm/comms/: __init__.py  bandwidth.py  bus.py  protocols.py  topology.py  trust.py
src/sargvision_swarm/core/: __init__.py  boids.py  bvc.py  ccg.py  olfati_saber.py  reflex.py  riemannian.py  sheaf.py  state.py  threat_field.py  tropical.py  twsl.py
src/sargvision_swarm/demo/: __init__.py  app.py  live_session.py  runner.py
src/sargvision_swarm/orchestrator/: __init__.py  chanakya.py  ed_cbba.py  maya.py  mission_planner.py  sheshnag.py  shield.py  swarm_raft.py  vajra.py  vyuha.py
src/sargvision_swarm/server/: __init__.py  bridge.py  geo.py
src/sargvision_swarm/sim/: __init__.py  border_strike.py  defense_field.py  hostiles.py  migration_zones.py  simple_sim.py
src/sargvision_swarm/viz/: __init__.py  live_frame.py  plot.py  topology.py
tests/: test_ccg.py  test_chanakya.py  test_comms_and_agents.py  test_comms_v2.py  test_maya.py  test_reflex.py  test_sheshnag.py  test_shield.py  test_sim.py  test_state.py  test_twsl.py  test_vajra.py
