[project]
name = "sargvision-swarm"
version = "0.0.1"
description = "SARGVISION AI CoE drone swarm — layered hybrid architecture (reflex + skill + cognition)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "SARGVISION AI CoE" }]

dependencies = [
    # Core scientific
    "numpy>=1.26,<3",
    "scipy>=1.13",
    "pydantic>=2.7",
    # Visualization
    "matplotlib>=3.8",
    "plotly>=5.20",
    # Web demo
    "gradio>=4.40,<6",
    # Orchestration (optional but core to architecture)
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # CLI + logging
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
]

[project.optional-dependencies]
sim = [
    # Higher-fidelity drone sim. gym-pybullet-drones is install-from-source:
    #   uv pip install "gym-pybullet-drones @ git+https://github.com/utiasDSL/gym-pybullet-drones"
    "gymnasium>=0.29",
    "pybullet>=3.2.6",
]
llm = [
    # Real LLM backends (in addition to built-in mock)
    "anthropic>=0.40",
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
swarm = "sargvision_swarm.cli:app"
swarm-demo = "sargvision_swarm.demo.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sargvision_swarm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
