[project]
name = "sargvision-swarm"
version = "0.0.1"
description = "SARGVISION AI CoE drone swarm — layered hybrid architecture (reflex + skill + cognition)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "SARGVISION AI CoE" }]

dependencies = [
    # Core scientific
    "numpy>=1.26,<3",
    "scipy>=1.13",
    "pydantic>=2.7",
    # Visualization
    "matplotlib>=3.8",
    "plotly>=5.20",
    # Web demo
    "gradio>=4.40,<6",
    # Orchestration (optional but core to architecture)
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # CLI + logging
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    # WebSocket bridge (Phase A console)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "msgpack>=1.1",
    "websockets>=13.0",
]

[project.optional-dependencies]
sim = [
    # Higher-fidelity drone sim. gym-pybullet-drones is install-from-source:
    #   uv pip install "gym-pybullet-drones @ git+https://github.com/utiasDSL/gym-pybullet-drones"
    "gymnasium>=0.29",
    "pybullet>=3.2.6",
]
llm = [
    # Real LLM backends (in addition to built-in mock)
    "anthropic>=0.40",
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
swarm = "sargvision_swarm.cli:app"
swarm-demo = "sargvision_swarm.demo.app:main"
swarm-bridge = "sargvision_swarm.server.bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sargvision_swarm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "C4", "SIM", "RUF"]
# Scientific code uses single-uppercase variables (N, M, T, E) matching paper
# notation; Sanskrit / unicode characters appear in docstrings + comments
# (Sanskrit doctrine names like Vajra, Sheshnag plus math symbols × ⊗ ∇ etc).
ignore = [
  "E501",   # line length — soft cap, prose comments are long by design
  "N806",   # uppercase variable in function (math notation)
  "N803",   # uppercase argument (math notation)
  "RUF002", # ambiguous unicode in docstring (Sanskrit + math)
  "RUF003", # ambiguous unicode in comment (Sanskrit + math)
  "B007",   # unused loop variable (math iteration convention)
  "RUF005", # list spread style (cosmetic)
  "RUF046", # int(x) on already-int (cosmetic)
  "RUF059", # unused unpacking variable (cosmetic)
  "SIM102", # nested-if (clearer for branchy math)
  "SIM105", # contextlib.suppress (extra import for no clarity gain)
  "SIM108", # if/else → ternary (often less readable in math)
  "SIM114", # multiple conditions with same body (often clearer separately in math branches)
  "SIM117", # nested with-statement (sometimes intentional for scoping)
  "SIM118", # `key in dict.keys()` (sometimes intentional for clarity)
  "SIM300", # yoda condition (sometimes intentional in numeric checks)
  "C408",   # rewrite `dict(...)` as `{...}` (kwargs-style is sometimes clearer)
  "B905",   # zip strict — many call sites guaranteed equal-length by construction
  "E402",   # module-level import not at top (we use late imports to avoid cycles)
  "E741",   # ambiguous variable name (l, I, O — `l` for length is fine in math)
  "UP042",  # `StrEnum`/`IntEnum` use Literal types instead (pre-3.11 compat)
  "F841",   # unused variable (some bindings document the unpacking shape)
  "RUF001", # ambiguous unicode in string (we use Sanskrit + symbols intentionally)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "F401"]  # tests sometimes import for side effects / bind for clarity

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
